# ignition

./: .editorconfig  README.md  meson.build
include/: ignition.h
scripts/: build.sh  globber.sh
src/: ignition.c
